# NetBoozt_InternetUpgrade

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  PROJECT_SETUP.md  README.es.md  README.md  RELEASE_NOTES.md  cli_windows.bat  cli_windows.py  init-git.ps1  nuitka-crash-report.xml  pyproject.toml  requirements-dev.txt
.github/instructions/: AgenticFlow_NetBoozt.instructions.md
.github/workflows/: ci.yml  release.yml
docs/: ASSET_HOSTING.md  CHANGELOG.md  FAQ.md  INSTALL.md  WHATS_NEW_V2.1.md  WHATS_NEW_V2.2.md
docs/architecture/: LANGUAGE_DECISION.md
docs/diagrams/: architecture.md  optimization-flow.md
docs/es/: FAQ.md  WHATS_NEW_V2.1.md  WHATS_NEW_V2.2.md  bbr-vs-cubic.md
docs/optimizations/: bbr-vs-cubic.md  tcp-congestion-control.md
releases/: README.md
releases/windows/: README.txt
scripts/: build_nuitka.ps1  build_python.ps1  dev.ps1
shared/: dns_servers.json  optimizations.json
tools/: README.md  create_favicon.py  generate_screenshots.py
windows/: $null  .gitignore  LICENSE  build.ps1  netboozt.bat  netboozt.spec  netboozt_cli.py  requirements.txt  run.py  run_modern.py  test_all.py  verify_build.py  version_info.txt
windows/src/gui/: __init__.py  about_tab.py  advanced_graphs.py  docs_tab.py  error_dialog.py  main_window.py  splash_screen.py  theme.py  theme_manager.py
windows/src/monitoring/: __init__.py  adapter_manager.py  dns_health.py  network_diagnostics.py  realtime_monitor.py
windows/src/optimizations/: __init__.py  network_optimizer.py
windows/src/storage/: __init__.py  backup_system.py  (+1 more)
(+1 files in other folders)
