# NetBoozt Configuration
# Project metadata and build settings

[project]
name = "NetBoozt"
version = "1.0.0"
description = "Advanced TCP/IP Network Optimization Toolkit for Windows & Linux"
authors = ["LOUST <www.loust.pro>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/louzt/NetBoozt_InternetUpgrade"
repository = "https://github.com/louzt/NetBoozt_InternetUpgrade"
keywords = ["network", "tcp", "optimization", "performance", "speedtest"]

[project.urls]
"Bug Tracker" = "https://github.com/louzt/NetBoozt_InternetUpgrade/issues"
"Documentation" = "https://github.com/louzt/NetBoozt_InternetUpgrade/wiki"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
